--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Infinity | BOT</title>
+    <title>BOTTY ANTI HACK | BOT</title>
 
     <!-- COPYRIGHT VERIFY -->
     <meta name="copyrighted-site-verification" content="271c10770f16902c" />
@@ -13,8 +13,7 @@
     <link rel="icon" href="https://upload.hicoria.com/files/EjwP5rR8.png" type="image/icon type">
 
     <meta property="og:site_name" content="✅ VERIFIED WEBSITE ✅">
-    <meta content="Infinity | BOT! New modern design and more! This bot has moderation, fun, utilities and more commands! This bot doesnt has dashboard :( This bot has better serverinfo and userinfo!
-If you would also like to learn the basics of programming, just come to the support server." property="og:description">
+    <meta content="Infinity | BOT! Ce bot s'occupe de la modération, de la sécurité et un peu de l'économie. " property="og:description">
     <meta content="https://upload.hicoria.com/files/EjwP5rR8.png" property="og:image">
     <meta name="theme-color" content="#A1C240">
 
@@ -53,9 +52,9 @@ If you would also like to learn the basics of programming, just come to the supp
 
     <center><div class="header">
       <br>
-      <img src="https://upload.hicoria.com/files/q4YwGS5a.png" style="height: 170px;"></img>
+      <img src="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png?size=4096" style="height: 170px;"></img>
       <br><br>
-      <p style="font-size: 25px;"><strong>Infinity | BOT</strong> is a high quality<br>The right bot for your discord!<br><font style="font-size: 23px;">Raiting <font color="orange">5/5 ★★★★★</font></font></p>
+      <p style="font-size: 25px;"><strong>Botty anti Hack | BOT</strong> est de grande qualité <br>et mis à jour constamant!<br><font style="font-size: 23px;">Raiting <font color="orange">5/5 ★★★★★</font></font></p>
       <br>
       <a href="https://discord.com/oauth2/authorize?client_id=720321585625694239&scope=bot&permissions=8" target="_blank" class="button">Invite BOT</a>
       <a href="https://top.gg/bot/720321585625694239/vote" target="_blank" class="button">Top.gg Vote</a>
@@ -66,34 +65,34 @@ If you would also like to learn the basics of programming, just come to the supp
     <section id="commands">
       <div> <!-- style="margin-top: 50px"-->
           <div class="section">
-              <img src="https://upload.hicoria.com/files/aTcr9B9d.png" class="sectionImg">
+              <img src="https://i.postimg.cc/dQZqShJz/image-2021-04-21-101052.png" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Moderation</span>
-                  <p style="font-size: 1rem;">Infinity bot has simple moderation commands.<br>
-                      You can easily throw the user kick, ban and warn.<br>
-                      It also contains other commands such as infractions, say and more
+                  <p style="font-size: 1rem;">Infinity bot possède un service de ban inédit en extention.<br>
+                      Vous pouvez facilement kicker, bannir et avertir les utilisateurs.<br>
+                      Il contient également d'autres commandes telles que ticket, fun ou autres
                   </p>
               </div>
           </div>
           <br>
           <div class="section">
-              <img src="https://upload.hicoria.com/files/A7FJtrGG.PNG" class="sectionImg">
+              <img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg">
               <div class="sectionDesc">
-                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Music</span>
-                  <p style="font-size: 1rem;">Infinity bot has advanced music system.<br>
-                      Has play/skip/voteskip/playother/volume and more.<br>
-                      Contains mainly queue.
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Traqueur</span>
+                  <p style="font-size: 1rem;">Infinity bot vous permet de tout savoir sur qui vous voulez.<br>
+                     à l'aide de commande pour traquer les invitations, les utilisateurs.<br>
+                     
                   </p>
               </div>
           </div>
           <br>
           <div class="section">
-              <img src="https://upload.hicoria.com/files/J5gaGdEs.PNG" class="sectionImg">
+              <img src="https://i.postimg.cc/FRjT7bjM/image-2021-04-21-101438.png" class="sectionImg">
               <div class="sectionDesc">
-                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Fun Commands</span>
-                  <p style="font-size: 1rem;">Infinity bot has fun system (commands).<br>
-                      Has dog/llama/cat/seal and more.<br>
-                      It also contains other commands such as hack and more.
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Simple</span>
+                  <p style="font-size: 1rem;">Infinity bot à des menus simples et clairs à comprendre.<br>
+                      bot souvenu par quesques serveurs<br>
+                      mais possède un grand potensiel.
                   </p>
               </div>
           </div>
