--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <ul class="topnav">
       <li><a href="#commands">Commands</a></li>
-      <li><a href="https://discord.com/oauth2/authorize?client_id=720321585625694239&scope=bot&permissions=8" target="_blank">Invite</a></li>
-      <li><a href="https://discord.gg/hVma4Yt" target="_blank">The Developers</a></li>
+      <!--<li><a href="" target="_blank">Invite</a></li> -->
+      <li><a href="https://discord.gg/WTpNbhkgpT" target="_blank">Support</a></li>
       <li><a onclick="darkMode()">DarkMode</a></li>
     </ul>
 
