--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
     <ul class="topnav">
       <li><a href="#commands">Commands</a></li>
-      <!--<li><a href="" target="_blank">Invite</a></li> -->
-      <li><a href="https://discord.gg/WTpNbhkgpT" target="_blank">Support</a></li>
+      <!--<li><a href="" target="_blank">Invite</a></li> 
+      <li><a href="https://discord.gg/WTpNbhkgpT" target="_blank">Support</a></li>-->
       <li><a onclick="darkMode()">DarkMode</a></li>
     </ul>
 
