--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="keywords" content="hernik,dev,programmer,hernikplays,hyro,hyrousek,thedevelopers,the developers,HyroM,hyro je l">
     <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
     <!-- WEBSITE ICON -->
-    <link rel="icon" href="https://upload.hicoria.com/files/EjwP5rR8.png" type="image/icon type">
+    <link rel="icon" href="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" type="image/icon type">
 
     <meta property="og:site_name" content="✅ VERIFIED WEBSITE ✅">
-    <meta content="Infinity | BOT! Ce bot s'occupe de la modération, de la sécurité et un peu de l'économie. " property="og:description">
-    <meta content="https://upload.hicoria.com/files/EjwP5rR8.png" property="og:image">
+    <meta content="Botty. Ce bot s'occupe de la modération, de la sécurité et un peu de l'économie. " property="og:description">
+    <meta content="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" property="og:image">
     <meta name="theme-color" content="#A1C240">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -51,7 +51,7 @@
 
     <center><div class="header">
       <br>
-      <img src="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png?size=4096" style="height: 100px;"></img>
+      <img src="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" style="height: 100px;"></img>
       <br><br>
       <p style="font-size: 25px;"><strong>Botty anti Hack | BOT</strong> est de grande qualité <br>et mis à jour constamant!<br><font style="font-size: 23px;">Raiting <font color="orange">5/5 ★★★★★</font></font></p>
       <br>
@@ -67,7 +67,7 @@
               <img src="https://i.postimg.cc/dQZqShJz/image-2021-04-21-101052.png" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Moderation</span>
-                  <p style="font-size: 1rem;">Infinity bot possède un service de ban inédit en extention.<br>
+                  <p style="font-size: 1rem;">Botty possède un service de ban inédit en extention.<br>
                       Vous pouvez facilement kicker, bannir et avertir les utilisateurs.<br>
                       Il contient également d'autres commandes telles que ticket, fun ou autres
                   </p>
@@ -78,7 +78,7 @@
               <img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Traqueur</span>
-                  <p style="font-size: 1rem;">Infinity bot vous permet de tout savoir sur qui vous voulez.<br>
+                  <p style="font-size: 1rem;">Botty vous permet de tout savoir sur qui vous voulez.<br>
                      à l'aide de commande pour traquer les invitations, les utilisateurs.<br>
                      
                   </p>
@@ -89,7 +89,7 @@
               <img src="https://i.postimg.cc/FRjT7bjM/image-2021-04-21-101438.png" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Simple</span>
-                  <p style="font-size: 1rem;">Infinity bot à des menus simples et clairs à comprendre.<br>
+                  <p style="font-size: 1rem;">Botty possède des menus simples et clairs à comprendre.<br>
                       bot souvenu par quesques serveurs<br>
                       mais possède un grand potensiel.
                   </p>
@@ -110,7 +110,7 @@
       }
     </script>
 
-   <br><br><center>Made by <a href="https://github.com/xHyroM">Hyro</a></center>
+   <br><br><center>Créé par <a href="https://github.com/betawolfy">Betawolfy et </a><a href="https://github.com/AQRRastiq">AQR_Rastiq</a>. Basé sur le template de <a href="https://github.com/xHyroM">Hyro</a></center>
 </body>
 
 </html>
