--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
       <br><br>
       <p style="font-size: 25px;"><strong>Botty anti Hack | BOT</strong> est de grande qualité <br>et mis à jour constamant!<br><font style="font-size: 23px;">Raiting <font color="orange">5/5 ★★★★★</font></font></p>
       <br>
-      <a href="https://discord.com/oauth2/authorize?client_id=720321585625694239&scope=bot&permissions=8" target="_blank" class="button">Invite BOT</a>
-      <a href="https://top.gg/bot/720321585625694239/vote" target="_blank" class="button">Top.gg Vote</a>
-      <a href="https://discord.gg/Abt4gW6" target="_blank" class="button">Join Support</a>
+      <a href="about:blank" target="_blank" class="button">Invite BOT (pas encore disponible)</a>
+      <a href="https://discord.gg/49bEa57WPE" target="_blank" class="button">rejoindre le Support</a>
       </a>
     </div></center>
 
