--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>BOTTY ANTI HACK | BOT</title>
+    <title>Botty bot</title>
 
     <!-- COPYRIGHT VERIFY -->
     <meta name="copyrighted-site-verification" content="271c10770f16902c" />
     <meta name="keywords" content="hernik,dev,programmer,hernikplays,hyro,hyrousek,thedevelopers,the developers,HyroM,hyro je l">
     <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
     <!-- WEBSITE ICON -->
-    <link rel="icon" href="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" type="image/icon type">
+    <link rel="icon" href="https://upload.hicoria.com/files/EjwP5rR8.png" type="image/icon type">
 
     <meta property="og:site_name" content="✅ VERIFIED WEBSITE ✅">
-    <meta content="Botty. Ce bot s'occupe de la modération, de la sécurité et un peu de l'économie. " property="og:description">
-    <meta content="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" property="og:image">
+    <meta content="Botty anti hack" property="og:description">
+    <meta content="https://upload.hicoria.com/files/EjwP5rR8.png" property="og:image">
     <meta name="theme-color" content="#A1C240">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="https://7dlbrn7w2vm1.statuspage.io/embed/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css"/>
     <link rel="stylesheet" href="./assets/css/cmds.css">
@@ -44,51 +45,51 @@
     <div id="preloader"></div>
 
     <ul class="topnav">
-      <li><a href="#commands">Commands</a></li>
-      
+	    <li><a href="#commands">Commands</a></li>
+      <li><a href="https://discord.gg/WTpNbhkgpT" target="_blank">Support</a></li>
       <li><a onclick="darkMode()">DarkMode</a></li>
+      <li><a href="https://github.com/betawolfy/botty.js/blob/main/nouveautés.md">Nouveautés</a></li>
     </ul>
 
     <center><div class="header">
       <br>
-      <img src="https://cdn.discordapp.com/avatars/480032260993581056/0f7c454a2ede6de5ea5404f853cfa0d9.png" style="height: 100px;"></img>
+      <img src="https://imgur.com/VVnTzav" style="height: 100px;"></img>
       <br><br>
-      <p style="font-size: 25px;"><strong>Botty anti Hack | BOT</strong> est de grande qualité <br>et mis à jour constamant!<br><font style="font-size: 23px;">Raiting <font color="orange">5/5 ★★★★★</font></font></p>
+      <p style="font-size: 25px;"><strong>Botty anti Hack</strong> viens de débuter sa carrière<br>mais est mis à jour constamant!<br><font style="font-size: 23px;">Noté <font color="orange">4/5 ★★★★</font></font></p>
       <br>
-      <a href="about:blank" target="_blank" class="button">Invite BOT (pas encore disponible)</a>
-      <a href="https://discord.gg/49bEa57WPE" target="_blank" class="button">rejoindre le Support</a>
+      <a href="about:blank" target="_blank" class="button">top.gg</a>
+      <a href="https://github.com/betawolfy/botty" target="_blank" class="button">github</a>
+      <a href="https://discord.gg/P9hwZ7nccP" target="_blank" class="button">rejoint le Support</a>
       </a>
     </div></center>
 
     <section id="commands">
       <div> <!-- style="margin-top: 50px"-->
           <div class="section">
-              <img src="https://i.postimg.cc/dQZqShJz/image-2021-04-21-101052.png" class="sectionImg">
+              <img src="" class="sectionImg">
               <div class="sectionDesc">
-                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Moderation</span>
-                  <p style="font-size: 1rem;">Botty possède un service de ban inédit en extention.<br>
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Modération</span>
+                  <p style="font-size: 1rem;">botty possède un service de ban inédit en extention.<br>
                       Vous pouvez facilement kicker, bannir et avertir les utilisateurs.<br>
-                      Il contient également d'autres commandes telles que ticket, fun ou autres
                   </p>
               </div>
           </div>
           <br>
           <div class="section">
-              <img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg">
+              <!-- img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg"-->
               <div class="sectionDesc">
-                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Traqueur</span>
-                  <p style="font-size: 1rem;">Botty vous permet de tout savoir sur qui vous voulez.<br>
-                     à l'aide de commande pour traquer les invitations, les utilisateurs.<br>
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">commandes personalisées</span>
+                  <p style="font-size: 1rem;">Fondateur de serveurs? Vous avez le droit à 3 commandes personalisées pour votre serveur.<br>
                      
                   </p>
               </div>
           </div>
           <br>
           <div class="section">
-              <img src="https://i.postimg.cc/FRjT7bjM/image-2021-04-21-101438.png" class="sectionImg">
+              <img src="" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Simple</span>
-                  <p style="font-size: 1rem;">Botty possède des menus simples et clairs à comprendre.<br>
+                  <p style="font-size: 1rem;">Botty à des menus simples et clairs à comprendre.<br>
                       bot souvenu par quesques serveurs<br>
                       mais possède un grand potensiel.
                   </p>
@@ -109,7 +110,7 @@
       }
     </script>
 
-   <br><br><center>Créé par <a href="https://github.com/betawolfy">Betawolfy et </a><a href="https://github.com/AQRRastiq">AQR_Rastiq</a>. Basé sur le template de <a href="https://github.com/xHyroM">Hyro</a></center>
+ <br><br><center>Créé par <a href="https://github.com/betawolfy">Betawolfy et </a><a href="https://github.com/AQRRastiq">AQR_Rastiq</a>. Basé sur le template de <a href="https://github.com/xHyroM">Hyro</a></center>
 </body>
-
+<script src="https://7dlbrn7w2vm1.statuspage.io/embed/script.js"></script>
 </html>
