--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               <img src="" class="sectionImg">
               <div class="sectionDesc">
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Modération</span>
-                  <p style="font-size: 1rem;">botty possède un service de ban inédit en extention.<br>
-                      Vous pouvez facilement kicker, bannir et avertir les utilisateurs.<br>
+                  <p style="font-size: 1rem;">Botty est nouveau, mais unique. <br>
+                      Nous vous offrons 2 commandes exclusivement pour votre serveur. <br>
                   </p>
               </div>
           </div>
@@ -78,8 +78,8 @@
           <div class="section">
               <!-- img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg"-->
               <div class="sectionDesc">
-                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">commandes personalisées</span>
-                  <p style="font-size: 1rem;">Fondateur de serveurs? Vous avez le droit à 3 commandes personalisées pour votre serveur.<br>
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Bloquage de salon.</span>
+                  <p style="font-size: 1rem;">Votre serveur ce fait raid? bloquez les salons infectés simplement. <br>
                      
                   </p>
               </div>
@@ -91,7 +91,7 @@
                   <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Simple</span>
                   <p style="font-size: 1rem;">Botty à des menus simples et clairs à comprendre.<br>
                       bot souvenu par quesques serveurs<br>
-                      mais possède un grand potensiel.
+                      mais possède un grand potenciel.
                   </p>
               </div>
           </div>
