--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
               </div>
           </div>
       </div>
+	    <br>
+	<div class="section">
+              <!-- img src="https://i.postimg.cc/mkyp63kY/image-2021-04-21-101351.png" class="sectionImg"-->
+              <div class="sectionDesc">
+                  <span style="color: orange; font-weight: bold; font-size: 2rem; margin-bottom: 5px">Offres de création de bot.</span>
+                  <p style="font-size: 1rem;">Nous faisons votre bot, vous ne faites rien! Plus d'information bientôt.<br>
+                     
+                  </p>
+              </div>
+          </div>
+          <br>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
